# ds-engineer-test-task

./: .gitignore  DS Engineer_Test Task.docx  README.md  main.py  pyproject.toml
task_1_islands/: README.md  islands.py  test_islands.py
task_2/: README.md  predict.py  requirements.txt  train.py
task_2/artifacts/: model.joblib
task_2/predictions/: predictions.csv
task_2_regression/: README.md
task_3_mnist_oop/: README.md  cnn_classifier.py  cnn_trainer.py  demo.py  digit_classifier.py  interfaces.py  lenet5.py  random_classifier.py  random_forest_classifier.py  requirements.txt  rf_trainer.py  test.ipynb
task_3_mnist_oop/artifacts/: lenet5.pt
task_3_mnist_oop/tests/: test_digit_classifier.py
