[project]
name = "ds-engineer-test-task"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
